--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -76,6 +76,22 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\Items\BookingCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Items\DishCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Items\RestaurantCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Items\UserCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\LoginPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -108,6 +124,18 @@
     </Compile>
     <Compile Include="Pages\DishesPage.xaml.cs">
       <DependentUpon>DishesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Items\BookingCard.xaml.cs">
+      <DependentUpon>BookingCard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Items\DishCard.xaml.cs">
+      <DependentUpon>DishCard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Items\RestaurantCard.xaml.cs">
+      <DependentUpon>RestaurantCard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Items\UserCard.xaml.cs">
+      <DependentUpon>UserCard.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
