Созданна структура проекта

--- a/RestAPP/RestAPP.csproj
+++ b/RestAPP/RestAPP.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <Folder Include="Pages\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="Context\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Model\" />
   </ItemGroup>
 
   <ItemGroup>
