--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
+
 
 dependencies {
 
@@ -37,4 +41,15 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation libs.navigation.fragment
+    implementation libs.navigation.ui
+    implementation libs.recyclerview
+    implementation libs.cardview
+    implementation libs.retrofit
+    implementation libs.retrofit.converter.gson
+    implementation libs.glide
+    implementation libs.okhttp.logging
+    implementation libs.lifecycle.viewmodel
+    implementation libs.lifecycle.livedata
 }
