--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".RestaurantListActivity" />
+        <activity android:name=".RestaurantDetailActivity" />
+        <activity android:name=".BookingActivity" />
     </application>
 
 </manifest>
