--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,7 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="ApiClient.cs" />
+    <Compile Include="ApiContext.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -71,15 +72,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Pages\AddEditDishPage.xaml">
+    <Page Include="Pages\AddEditDish.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\AddEditRestaurantPage.xaml">
+    <Page Include="Pages\AddEditRestaurant.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\AddEditUserPage.xaml">
+    <Page Include="Pages\AddEditUser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AdminLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -88,6 +93,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\DishesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\HomePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -107,18 +116,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\LoginPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\MainPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\RegisterPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Pages\RestaurantsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -127,27 +124,39 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Administrator.cs" />
+    <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\Dish.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Models\RestaurantDish.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Pages\AddEditDishPage.xaml.cs">
-      <DependentUpon>AddEditDishPage.xaml</DependentUpon>
+    <Compile Include="Pages\AddEditDish.xaml.cs">
+      <DependentUpon>AddEditDish.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\AddEditRestaurantPage.xaml.cs">
-      <DependentUpon>AddEditRestaurantPage.xaml</DependentUpon>
+    <Compile Include="Pages\AddEditRestaurant.xaml.cs">
+      <DependentUpon>AddEditRestaurant.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\AddEditUserPage.xaml.cs">
-      <DependentUpon>AddEditUserPage.xaml</DependentUpon>
+    <Compile Include="Pages\AddEditUser.xaml.cs">
+      <DependentUpon>AddEditUser.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AdminLogin.xaml.cs">
+      <DependentUpon>AdminLogin.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\BookingsPage.xaml.cs">
       <DependentUpon>BookingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\DishesPage.xaml.cs">
       <DependentUpon>DishesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\HomePage.xaml.cs">
+      <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Items\BookingCard.xaml.cs">
       <DependentUpon>BookingCard.xaml</DependentUpon>
@@ -160,15 +169,6 @@
     </Compile>
     <Compile Include="Pages\Items\UserCard.xaml.cs">
       <DependentUpon>UserCard.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\LoginPage.xaml.cs">
-      <DependentUpon>LoginPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\RegisterPage.xaml.cs">
-      <DependentUpon>RegisterPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\RestaurantsPage.xaml.cs">
       <DependentUpon>RestaurantsPage.xaml</DependentUpon>
