--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -31,6 +32,7 @@
         <activity android:name=".Activities$RegisterActivity"/>
         <activity android:name=".Activities$RestaurantListActivity"/>
         <activity android:name=".Activities$RestaurantDetailActivity" />
+        <activity android:name=".Activities$ProfileActivity" />
     </application>
 
 </manifest>
