--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
     implementation libs.recyclerview
