--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <application
 
         android:allowBackup="true"
+
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,9 +19,10 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
+
         <!-- Точка входа в приложение -->
         <activity
-            android:name=".Activities$LoginActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,10 +31,11 @@
         </activity>
 
         <!-- Остальные реально существующие Activity -->
-        <activity android:name=".Activities$RegisterActivity"/>
-        <activity android:name=".Activities$RestaurantListActivity"/>
-        <activity android:name=".Activities$RestaurantDetailActivity" />
-        <activity android:name=".Activities$ProfileActivity" />
+        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".RestaurantListActivity"/>
+        <activity android:name=".RestaurantDetailActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".EditProfileActivity" />
     </application>
 
 </manifest>
