--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".RestaurantListActivity"/>
         <activity android:name=".RestaurantDetailActivity" />
+        <activity android:name=".NewsActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".EditProfileActivity" />
     </application>
